--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "goit-react-hw-07-phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ValeriaNikitiuk.github.io/goit-react-hw-07-phonebook",
+  "homepage": "https://ValeriaNikitiuk.github.io/goit-react-hw-08-phonebook",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "combine-reducers": "^1.0.0",
+    "navigate": "^0.3.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
@@ -19,6 +22,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
+    "toastr": "^2.1.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.3"
   },
