--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "homepage": "https://ValeriaNikitiuk.github.io/goit-react-hw-08-phonebook",
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "combine-reducers": "^1.0.0",
+    "framer-motion": "^10.5.0",
     "navigate": "^0.3.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -23,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
     "toastr": "^2.1.4",
+    "use-history": "^1.4.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.3"
   },
